Refactor: 메서드 책임 분리 및 Stream API 변경